Нормально сделаны поиск в ширину копированием и поиск в глубину рекурсией